remove using of deprecated methods/classes und correct some class names